--- a/EDA-Clustering.ipynb
+++ b/EDA-Clustering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "7a2b7006-aa91-42c6-8daf-91654c3f7e58",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "dba4d921-3468-4de4-9318-d3a5f0d3c71c",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "33ef5b6b-824c-49f6-b292-842189792011",
    "metadata": {},
    "outputs": [
@@ -52,7 +52,7 @@
        "Name: disposition_type, dtype: float64"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "683e07d9-f1e0-4528-b836-678f98b887df",
    "metadata": {},
    "outputs": [
@@ -155,43 +155,14 @@
        "Void                4.320735    59.584610"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# total-paid and fine-amount based on disposition type\n",
     "df.groupby(by = 'disposition_type').mean()[['total_paid','fine_amount']]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "f6bc1a97-c085-46c3-bbad-84e108a5cb39",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fine = df[df['disposition_type'] == 'Other'][['objectid','disposition_type','total_paid', 'fine_amount','longitude','latitude']]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "4dc03143-af9b-4c93-a5ff-6ed1bd4ec47f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fine_0 = fine[fine['total_paid']== 0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "47024cb7-8e78-467d-b76f-1eba8f3322ae",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fine_0.to_csv('datasets/fine_0.csv')"
    ]
   },
   {
