--- a/tickets-data-cleaning-preprocessing.ipynb
+++ b/tickets-data-cleaning-preprocessing.ipynb
@@ -2,10 +2,10 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "f5153bd7-d997-46d0-bad0-1dc04bd18694",
+   "id": "789894f9-a9e4-41e8-8cff-9f46096c873b",
    "metadata": {},
    "source": [
-    "**Each of the four of us used this identical preeliminary cleaning steps for our 6 months of data. Which was then compiled into one giant dataset called total.csv**"
+    "**Each of the four of us used this identical preliminary cleaning steps for our 6 months of data. Which was then compiled into one giant dataset called total.csv**"
    ]
   },
   {
@@ -35,7 +35,8 @@
     "        df = pd.read_csv(filename, index_col=None, header=0)\n",
     "        li.append(df)\n",
     "    frame = pd.concat(li, axis=0, ignore_index=True)\n",
-    "    return frame"
+    "    return frame\n",
+    "\n"
    ]
   },
   {
@@ -533,7 +534,7 @@
    "outputs": [],
    "source": [
     "# Saving cleaned dataset for my months\n",
-    "# tix_jul18_dec18.to_csv('data/boris_months.csv', index=False)"
+    "# tix_jul18_dec18.to_csv('Data/boris_months.csv', index=False)"
    ]
   },
   {
@@ -545,20 +546,33 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dde5b831-14fc-4e59-8099-3093ca2d39f9",
+   "cell_type": "markdown",
+   "id": "2f4f92b7-6e68-4015-b26b-94489703fa1f",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "**After receiving everyone's 6 months worth of preprocessed data, they were all concatenated into one dataframe.**"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16a058d8-3b3a-46a1-9fca-b7f2157c561e",
+   "id": "61d06a2c-2693-4381-b8c6-3cf06aaadbcc",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df_list = [df_july17_dec17,df_jan18_jun18,df_july18_dec18,df_jan19_jun19]\n",
+    "df = pd.concat(df_list, axis=0, ignore_index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dfdf86c0-e45c-486d-baaa-2d45e298a91d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv('./Data/total.csv',index=False)"
+   ]
   }
  ],
  "metadata": {
